name:                Carnap
version:             0.1.0.0
synopsis:            Libraries for the Carnap Proof Assistant
description:         See Carnap.io/about
license:             GPL-3
license-file:        LICENSE
author:              Jake Ehrlich, Graham Leach-Krouse
maintainer:          gleachkr@gmail.com
copyright:           2019 Jake Ehrlich, Graham Leach-Krouse
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Carnap.Core.Data.Types
                     , Carnap.Core.Data.Optics
                     , Carnap.Core.Data.Classes
                     , Carnap.Core.Unification.FirstOrder
                     , Carnap.Core.Unification.Unification
                     , Carnap.Core.Unification.ACUI
                     , Carnap.Core.Unification.AU
                     , Carnap.Core.Unification.Huet
                     , Carnap.Core.Unification.Combination
                     , Carnap.Core.ModelChecking.SAT
                     , Carnap.Core.Data.Util
                     , Carnap.Core.Util
                     , Carnap.Languages.Util.GenericConstructors
                     , Carnap.Languages.Util.GenericParsers
                     , Carnap.Languages.Util.LanguageClasses
                     , Carnap.Languages.PurePropositional.Syntax
                     , Carnap.Languages.PurePropositional.Parser
                     , Carnap.Languages.PurePropositional.Util
                     , Carnap.Languages.PurePropositional.Logic
                     , Carnap.Languages.PurePropositional.Logic.Rules
                     , Carnap.Languages.PurePropositional.Logic.Carnap
                     , Carnap.Languages.PurePropositional.Logic.KalishAndMontague
                     , Carnap.Languages.PurePropositional.Logic.BergmannMoorAndNelson
                     , Carnap.Languages.PurePropositional.Logic.IchikawaJenkins
                     , Carnap.Languages.PurePropositional.Logic.Magnus
                     , Carnap.Languages.PurePropositional.Logic.Hausman
                     , Carnap.Languages.PurePropositional.Logic.Gamut
                     , Carnap.Languages.PurePropositional.Logic.Gallow
                     , Carnap.Languages.PurePropositional.Logic.Goldfarb
                     , Carnap.Languages.PurePropositional.Logic.HowardSnyder
                     , Carnap.Languages.PurePropositional.Logic.Hardegree
                     , Carnap.Languages.PurePropositional.Logic.Hurley
                     , Carnap.Languages.PurePropositional.Logic.Bonevac
                     , Carnap.Languages.PurePropositional.Logic.ThomasBolducAndZach
                     , Carnap.Languages.PurePropositional.Logic.EbelsDuggan
                     , Carnap.Languages.PurePropositional.Logic.Tomassi
                     , Carnap.Languages.PurePropositional.Logic.Gentzen
                     , Carnap.Languages.PurePropositional.Logic.OpenLogic
                     , Carnap.Languages.PurePropositional.Logic.Allen
                     , Carnap.Languages.PurePropositional.Logic.Equivalence
                     , Carnap.Languages.ModalPropositional.Syntax
                     , Carnap.Languages.ModalPropositional.Parser
                     , Carnap.Languages.ModalPropositional.Logic
                     , Carnap.Languages.ModalPropositional.Logic.Rules
                     , Carnap.Languages.ModalPropositional.Logic.Hardegree
                     , Carnap.Languages.ModalFirstOrder.Syntax
                     , Carnap.Languages.ModalFirstOrder.Parser
                     , Carnap.Languages.ModalFirstOrder.Logic
                     , Carnap.Languages.ModalFirstOrder.Logic.Rules
                     , Carnap.Languages.ModalFirstOrder.Logic.Hardegree
                     , Carnap.Languages.PureFirstOrder.Syntax
                     , Carnap.Languages.PureFirstOrder.Semantics
                     , Carnap.Languages.PureFirstOrder.Parser
                     , Carnap.Languages.PureFirstOrder.Util
                     , Carnap.Languages.PureFirstOrder.Logic
                     , Carnap.Languages.PureFirstOrder.Logic.Rules
                     , Carnap.Languages.PureFirstOrder.Logic.Magnus
                     , Carnap.Languages.PureFirstOrder.Logic.Carnap
                     , Carnap.Languages.PureFirstOrder.Logic.KalishAndMontague
                     , Carnap.Languages.PureFirstOrder.Logic.ThomasBolducAndZach
                     , Carnap.Languages.PureFirstOrder.Logic.EbelsDuggan
                     , Carnap.Languages.PureFirstOrder.Logic.BergmannMoorAndNelson
                     , Carnap.Languages.PureFirstOrder.Logic.IchikawaJenkins
                     , Carnap.Languages.PureFirstOrder.Logic.Hausman
                     , Carnap.Languages.PureFirstOrder.Logic.Gamut
                     , Carnap.Languages.PureFirstOrder.Logic.Gallow
                     , Carnap.Languages.PureFirstOrder.Logic.Tomassi
                     , Carnap.Languages.PureFirstOrder.Logic.HowardSnyder
                     , Carnap.Languages.PureFirstOrder.Logic.Hurley
                     , Carnap.Languages.PureFirstOrder.Logic.Hardegree
                     , Carnap.Languages.PureFirstOrder.Logic.Bonevac
                     , Carnap.Languages.PureFirstOrder.Logic.Goldfarb
                     , Carnap.Languages.PureFirstOrder.Logic.Gentzen
                     , Carnap.Languages.PureFirstOrder.Logic.OpenLogic
                     , Carnap.Languages.PureFirstOrder.Logic.Equivalence
                     , Carnap.Languages.PureSecondOrder.Syntax
                     , Carnap.Languages.PureSecondOrder.Parser
                     , Carnap.Languages.PureSecondOrder.Logic
                     , Carnap.Languages.PureSecondOrder.Logic.Rules
                     , Carnap.Languages.PureSecondOrder.Logic.Carnap
                     , Carnap.Languages.Arithmetic.Syntax
                     , Carnap.Languages.Arithmetic.Parser
                     , Carnap.Languages.Arithmetic.Logic
                     , Carnap.Languages.Arithmetic.Logic.OpenLogic
                     , Carnap.Languages.SetTheory.Syntax
                     , Carnap.Languages.SetTheory.Parser
                     , Carnap.Languages.SetTheory.Logic
                     , Carnap.Languages.SetTheory.Logic.Rules
                     , Carnap.Languages.SetTheory.Logic.Carnap
                     , Carnap.Languages.SetTheory.Logic.OpenLogic
                     , Carnap.Languages.DefiniteDescription.Syntax
                     , Carnap.Languages.DefiniteDescription.Semantics
                     , Carnap.Languages.DefiniteDescription.Util
                     , Carnap.Languages.DefiniteDescription.Parser
                     , Carnap.Languages.DefiniteDescription.Logic.Gamut
                     , Carnap.Languages.ClassicalSequent.Syntax
                     , Carnap.Languages.ClassicalSequent.Parser
                     , Carnap.Calculi.Util
                     , Carnap.Calculi.NaturalDeduction.Checker
                     , Carnap.Calculi.NaturalDeduction.Parser
                     , Carnap.Calculi.NaturalDeduction.Parser.Util
                     , Carnap.Calculi.NaturalDeduction.Parser.Hilbert
                     , Carnap.Calculi.NaturalDeduction.Parser.Montague
                     , Carnap.Calculi.NaturalDeduction.Parser.Fitch
                     , Carnap.Calculi.NaturalDeduction.Parser.Lemmon
                     , Carnap.Calculi.NaturalDeduction.Parser.Hardegree
                     , Carnap.Calculi.NaturalDeduction.Parser.StructuredFitch
                     , Carnap.Calculi.NaturalDeduction.Syntax
                     , Carnap.Calculi.NaturalDeduction.Util
                     , Carnap.Calculi.Tableau.Data
                     , Carnap.Calculi.Tableau.Checker

  build-depends:       base >= 4.7
                     , lens >= 4.12
                     , mtl >= 2.2.1
                     , containers >= 0.5.6.2
                     , parsec >= 3.1.9
                     , logict
                     , transformers
                     , hashable
  default-language:    Haskell2010

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           test.hs
    other-modules:
    hs-source-dirs:    test
    ghc-options:       -Wall


    build-depends:     base
                     , Carnap
                     , text
                     , shakespeare
    default-language:  Haskell2010
